[project]
name = "stata-ai-fusion"
version = "0.2.0"
description = "MCP Server + Skill for Stata: execute commands, inspect data, and generate high-quality Stata code with AI"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["stata", "mcp", "ai", "econometrics", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "mcp>=1.0.0",
    "pexpect>=4.9.0",
    "anyio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
stata-ai-fusion = "stata_ai_fusion.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
